--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "client",
-  "proxy": "https://fyp-final-one.vercel.app/",
+  "proxy": "https://backendfyp-production.up.railway.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
